--- a/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
@@ -10,6 +10,8 @@
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/net/ti-dp83867.h>
 #include <dt-bindings/phy/phy-cadence.h>
+#include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/media/ds90ub9xx.h>
 
 / {
 	chosen {
@@ -219,6 +221,26 @@
 				remote-endpoint = <&dp0_out>;
 			};
 		};
+	};
+
+	clk_fusion_25M_fixed: fixed-clock-25M {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <25000000>;
+	};
+
+	clk_cam_module_48M_fixed: fixed-clock-1-48M {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <48000000>;
+	};
+
+	clk_cam_24M: fixed-clock-1-24M {
+		compatible = "fixed-factor-clock";
+		clocks = <&clk_cam_module_48M_fixed>;
+		#clock-cells = <0>;
+		clock-div = <2>;
+		clock-mult = <1>;
 	};
 };
 
@@ -698,6 +720,46 @@
 		gpio-controller;
 		#gpio-cells = <2>;
 	};
+
+	deser@3d {
+		compatible = "ti,ds90ub960-q1";
+
+		reg-names = "main",
+			    "rxport0", "rxport1", "rxport2", "rxport3",
+			    "ser0", "ser1", "ser2", "ser3";
+		reg       = <0x3d>,
+			    <0x40>, <0x41>, <0x42>, <0x43>,
+			    <0x44>, <0x45>, <0x46>, <0x47>;
+
+		clocks = <&clk_fusion_25M_fixed>;
+
+		i2c-alias-pool = /bits/ 16 <0x4a 0x4b 0x4c 0x4d 0x4e 0x4f>;
+
+		gpio-controller;
+		#gpio-cells = <3>; /* rxport, remote gpio num, flags */
+
+		ds90ub960_0_ports: ports {
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			/* CSI-2 */
+			port@4 {
+				reg = <4>;
+				ds90ub960_0_csi_out: endpoint {
+					clock-lanes = <0>;
+					data-lanes = <1 2 3 4>;
+					/* Actually a REFCLK multiplier */
+					data-rate = <800000000>;
+					remote-endpoint = <&csi2_phy0>;
+				};
+			};
+		};
+
+		ds90ub960_0_atr: i2c-atr {
+			#address-cells = <1>;
+			#size-cells = <0>;
+		};
+	};
 };
 
 &mcu_cpsw {
@@ -1039,7 +1101,11 @@
 };
 
 &csi0_port0 {
-	status = "disabled";
+	csi2_phy0: endpoint {
+		remote-endpoint = <&ds90ub960_0_csi_out>;
+		clock-lanes = <0>;
+		data-lanes = <1 2 3 4>;
+	};
 };
 
 &csi0_port1 {
@@ -1056,4 +1122,351 @@
 
 &csi0_port4 {
 	status = "disabled";
+};
+
+/* Camera 1 */
+
+&ds90ub960_0_ports {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	/* FPDLink RX 1 */
+	port@1 {
+		reg = <1>;
+		ds90ub960_fpd3_in1: endpoint {
+			remote-endpoint = <&ub913_out1>;
+
+			serializer1: remote-chip {
+				compatible = "ti,ds90ub913a-q1";
+
+				gpio-functions = <DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_UNUSED
+						  DS90_GPIO_FUNC_UNUSED>;
+
+				gpio-controller;
+				#gpio-cells = <2>;
+
+				ports {
+					#address-cells = <1>;
+					#size-cells = <0>;
+
+					port@0 {
+						reg = <0>;
+						ub913_in1: endpoint@0 {
+							remote-endpoint = <&sensor_out1>;
+						};
+					};
+
+					port@1 {
+						reg = <1>;
+
+						ub913_out1: endpoint@0 {
+							remote-endpoint = <&ds90ub960_fpd3_in1>;
+						};
+					};
+				};
+			};
+		};
+	};
+};
+
+&ds90ub960_0_atr {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	i2c@1 {
+		reg = <1>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		sensor@30 {
+			compatible = "ovti,ov10635";
+			reg = <0x30>;
+
+			clocks = <&clk_cam_24M>;
+			clock-names = "xvclk";
+
+			/* powerdown-gpios = <GPO0 from ser>; */
+			/* framesync-gpios = <GPO1 from ser>; */
+
+			powerdown-gpios = <&serializer1 0 GPIO_ACTIVE_HIGH>;
+
+			/* Note: PCLK must be 96MHz */
+
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+				sensor_out1: endpoint {
+					remote-endpoint = <&ub913_in1>;
+					hsync-active = <1>;
+					vsync-active = <1>;
+					pclk-sample = <0>;
+					bus-width = <10>;
+				};
+			};
+		};
+	};
+};
+
+/* Camera 0. */
+
+&ds90ub960_0_ports {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	/* FPDLink RX 0 */
+	port@0 {
+		reg = <0>;
+		ds90ub960_fpd3_in0: endpoint {
+			remote-endpoint = <&ub913_out0>;
+
+			serializer0: remote-chip {
+				compatible = "ti,ds90ub913a-q1";
+
+				gpio-functions = <DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_UNUSED
+						  DS90_GPIO_FUNC_UNUSED>;
+
+				gpio-controller;
+				#gpio-cells = <2>;
+
+				ports {
+					#address-cells = <1>;
+					#size-cells = <0>;
+
+					port@0 {
+						reg = <0>;
+						ub913_in0: endpoint@0 {
+							remote-endpoint = <&sensor_out0>;
+						};
+					};
+
+					port@1 {
+						reg = <1>;
+
+						ub913_out0: endpoint@0 {
+							remote-endpoint = <&ds90ub960_fpd3_in0>;
+						};
+					};
+				};
+			};
+		};
+	};
+};
+
+&ds90ub960_0_atr {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	i2c@0 {
+		reg = <0>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		sensor@30 {
+			compatible = "ovti,ov10635";
+			reg = <0x30>;
+
+			clocks = <&clk_cam_24M>;
+			clock-names = "xvclk";
+
+			/* powerdown-gpios = <GPO0 from ser>; */
+			/* framesync-gpios = <GPO1 from ser>; */
+
+			powerdown-gpios = <&serializer0 0 GPIO_ACTIVE_HIGH>;
+
+			/* Note: PCLK must be 96MHz */
+
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+				sensor_out0: endpoint {
+					remote-endpoint = <&ub913_in0>;
+					hsync-active = <1>;
+					vsync-active = <1>;
+					pclk-sample = <0>;
+					bus-width = <10>;
+				};
+			};
+		};
+	};
+};
+
+/* Camera 3 */
+
+&ds90ub960_0_ports {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	/* FPDLink RX 2 */
+	port@2 {
+		reg = <2>;
+		ds90ub960_fpd3_in3: endpoint {
+			remote-endpoint = <&ub913_out3>;
+
+			serializer3: remote-chip {
+				compatible = "ti,ds90ub913a-q1";
+
+				gpio-functions = <DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_UNUSED
+						  DS90_GPIO_FUNC_UNUSED>;
+
+				gpio-controller;
+				#gpio-cells = <2>;
+
+				ports {
+					#address-cells = <1>;
+					#size-cells = <0>;
+
+					port@0 {
+						reg = <0>;
+						ub913_in3: endpoint@0 {
+							remote-endpoint = <&sensor_out3>;
+						};
+					};
+
+					port@1 {
+						reg = <1>;
+
+						ub913_out3: endpoint@0 {
+							remote-endpoint = <&ds90ub960_fpd3_in3>;
+						};
+					};
+				};
+			};
+		};
+	};
+};
+
+&ds90ub960_0_atr {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	i2c@2 {
+		reg = <2>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		sensor@30 {
+			compatible = "ovti,ov10635";
+			reg = <0x30>;
+
+			clocks = <&clk_cam_24M>;
+			clock-names = "xvclk";
+
+			/* powerdown-gpios = <GPO0 from ser>; */
+			/* framesync-gpios = <GPO1 from ser>; */
+
+			powerdown-gpios = <&serializer3 0 GPIO_ACTIVE_HIGH>;
+
+			/* Note: PCLK must be 96MHz */
+
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+				sensor_out3: endpoint {
+					remote-endpoint = <&ub913_in3>;
+					hsync-active = <1>;
+					vsync-active = <1>;
+					pclk-sample = <0>;
+					bus-width = <10>;
+				};
+			};
+		};
+	};
+};
+
+/* Camera 4 */
+&ds90ub960_0_ports {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	/* FPDLink RX 3 */
+	port@3 {
+		reg = <3>;
+		ds90ub960_fpd3_in4: endpoint {
+			remote-endpoint = <&ub913_out4>;
+
+			serializer4: remote-chip {
+				compatible = "ti,ds90ub913a-q1";
+
+				gpio-functions = <DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_OUTPUT
+						  DS90_GPIO_FUNC_UNUSED
+						  DS90_GPIO_FUNC_UNUSED>;
+
+				gpio-controller;
+				#gpio-cells = <2>;
+
+				ports {
+					#address-cells = <1>;
+					#size-cells = <0>;
+
+					port@0 {
+						reg = <0>;
+						ub913_in4: endpoint@0 {
+							remote-endpoint = <&sensor_out4>;
+						};
+					};
+
+					port@1 {
+						reg = <1>;
+
+						ub913_out4: endpoint@0 {
+							remote-endpoint = <&ds90ub960_fpd3_in4>;
+						};
+					};
+				};
+			};
+		};
+	};
+};
+
+&ds90ub960_0_atr {
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	i2c@3 {
+		reg = <3>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		sensor@30 {
+			compatible = "ovti,ov10635";
+			reg = <0x30>;
+
+			clocks = <&clk_cam_24M>;
+			clock-names = "xvclk";
+
+			/* powerdown-gpios = <GPO0 from ser>; */
+			/* framesync-gpios = <GPO1 from ser>; */
+
+			powerdown-gpios = <&serializer4 0 GPIO_ACTIVE_HIGH>;
+
+			/* Note: PCLK must be 96MHz */
+
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			port@0 {
+				reg = <0>;
+				sensor_out4: endpoint {
+					remote-endpoint = <&ub913_in4>;
+					hsync-active = <1>;
+					vsync-active = <1>;
+					pclk-sample = <0>;
+					bus-width = <10>;
+				};
+			};
+		};
+	};
 };
